crates/toml_edit/tests/snapshots/invalid/float/exp-trailing-us-02.stderr
TOML parse error at line 1, column 25
  |
1 | exp-trailing-us-02 = 1.2_e2
  |                         ^
`_` may only go between digits
